[package]
name = "mtge-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31.0"
mtge-core = { version = "0.1.0", path = "../mtge-core" }
nalgebra-glm = "0.16.0"
once_cell = "1.10.0"

[features]
